
[metadata]
author = Tim Mitchell
author_email = tim.mitchell@seequent.com
url = https://github.com/tim-mitchell/prebuilt_binaries
name = prebuilt-binaries
version = 0.1.0

[options]
py_modules = prebuilt_binaries
install_requires =
    setuptools >= 40.0

[options.entry_points]
distutils.commands =
     prebuilt_binary = prebuilt_binaries:prebuilt_binary
