
[metadata]
author = Tim Mitchell
author_email = tim.mitchell@seequent.com
url = https://github.com/tim-mitchell/prebuilt_binaries
name = prebuilt-binaries
version = 0.2.0
description = A setuptools command for packaging pre-built binary python extension modules.
long_description = file: README.md
keywords = packaging, extension, setuptools
classifiers =
    Framework :: Setuptools Plugin
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools

[options]
py_modules = prebuilt_binaries
install_requires =
    setuptools >= 40.0

[options.entry_points]
distutils.commands =
     prebuilt_binary = prebuilt_binaries:prebuilt_binary
